# TimeLord

./: .gitignore  README.md  Testing.ipynb  pyproject.toml
src/: _Utils.py  __Process__.py  __init__.py
src/timelord/: _Process.py  _Utils.py
